--- a/site/style.css
+++ b/site/style.css
@@ -13,13 +13,13 @@
 
     --color-bg-900: #050606;
     --color-bg-800  : #090C0B;
-    --color-bg-100  : #cbdbd2;
-    --color-bg-50  : #F0F6F5;
+    --color-bg-100  : #adcdcf;
+    --color-bg-50  : #e0fdff;
 
     --gradient-bg-slide-light: linear-gradient(135deg, var(--color-bg-slide-50), var(--color-bg-slide-100));
-    --gradient-bg-slide-dark: linear-gradient(45deg, var(--color-bg-slide-900), var(--color-bg-slide-800));
-    --gradient-bg-light: linear-gradient(45deg, var(--color-bg-100), var(--color-bg-50));
-    --gradient-bg-dark: linear-gradient(45deg, var(--color-bg-900), var(--color-bg-800));
+    --gradient-bg-slide-dark: linear-gradient(135deg, var(--color-bg-slide-900), var(--color-bg-slide-800));
+    --gradient-bg-light: linear-gradient(to bottom right, var(--color-bg-50 ), 45%, var(--color-bg-100));
+    --gradient-bg-dark: linear-gradient(135deg, var(--color-bg-900), var(--color-bg-800));
 }
 
 * 
@@ -56,7 +56,7 @@
 
 #outras_opcoes img:hover 
 {
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 
 #left_login 
@@ -71,14 +71,17 @@
 
 #left_login h1 
 {
-    
+    text-align: center;
+    width: 40vw;
+    height: 17vh;
+    font-size: 55px;
     color: #0A8CBF;
 }
 
-#water_drop 
+#img_water_drop 
 {
-    width: 35vw;
-    height: 20vh;
+    width: 100vw;
+    height: 62vh;
 }
 
 #login_right 
@@ -102,6 +105,22 @@
     height: fit-content; /* analizar */
     animation: dark-to-light-bg-slide 0.3s ease-in-out;
 }
+
+#esqueceu_senha a
+{
+
+    display: flex;
+    justify-content: flex-end;
+    text-decoration: none;
+    color: var(--color-texto-900)
+}
+
+#esqueceu_senha a:hover
+{
+    text-decoration: underline;
+    color: #0A8CBF;
+}
+
 
 #header 
 {
@@ -137,6 +156,7 @@
 { 
     font-size: 20px;
     color: #000F0E;
+    animation: dark-to-light-texto 0.3s ease-in-out;
 }
 
 #div_input input 
@@ -148,6 +168,7 @@
     font-size: 18px;
     padding: 0px 5px;
     background-color: #BECFCA;
+    animation: dark-to-light-input 0.3s ease-in-out;
 }
 
 #btn_login 
@@ -161,9 +182,10 @@
      margin: 0px 70px; 
     font-size: 22px;
     font-weight: bold;
+    animation: dark-to-light-botao 0.3s ease-in-out;
 }
 
-#esqueceu_senha 
+#esqueceu_senha a
 {
     color: #000A09;
 }
@@ -171,63 +193,170 @@
 
 
 
-
-
-
 .dark#div_input input 
 {
     background-color: #012320;
+    animation: light-to-dark-input 0.3s ease-in-out;
 }
 
 
 .dark#btn_login 
 {
     color: var(--color-texto-900);
+    animation: light-to-dark-botao 0.3s ease-in-out;
 }
 
 .dark#main_container
 {
     background: var(--gradient-bg-dark);
-    /* animation: light-to-dark-bg 0.3s ease-in-out; */
+    animation: light-to-dark-bg 0.3s ease-in-out;
 }
 
 .dark#login_form 
 {
     color: var(--color-texto-50);
     background: var(--gradient-bg-slide-dark);
-    /* animation: light-to-dark-bg-slide 0.3s ease-in-out; */
+    animation: light-to-dark-bg-slide 0.3s ease-in-out;
+   
 }
 
 .dark#div_input span
 {
-    color: var(--color-texto-50)
+    color: var(--color-texto-50);
+    animation: light-to-dark-texto 0.3s ease-in-out;
+}
+
+.dark#esqueceu_senha a
+{
+    color: var(--color-bg-50);
+    animation: light-to-dark-texto 0.3s ease-in-out;
 }
 
 
 
-
+/* animacoes */
 
 
 @keyframes light-to-dark-bg-slide 
 {
     0%
-    {
-        background: var(--gradient-bg-slide-light);
+    {   
+        background: #c7d6cd;
     }
     100%
     {
-        background: var(--gradient-bg-slide-dark);
+        background: #000F0E;
     }
+
 }
 
 @keyframes dark-to-light-bg-slide 
 {
     0%
     {
-        background: var(--gradient-bg-slide-dark);
+        background: #000F0E;
     }
     100% 
     {
-        background: var(--gradient-bg-slide-light);
+        background: #c7d6cd;
+    }
+}
+
+@keyframes light-to-dark-bg
+{
+    0%
+    {   
+        background: #adcdcf;
+    }
+    100%
+    {
+        background: #050606;
+    }
+
+}
+
+@keyframes dark-to-light-bg
+{
+    0%
+    {
+        background: #050606;
+    }
+    100% 
+    {
+        background: #adcdcf;
+    }
+}
+
+@keyframes light-to-dark-texto
+{
+    0%
+    {
+        color: #050606;
+    }
+    100% 
+    {
+        color: #F0F6F5;
+    }
+}
+
+@keyframes dark-to-light-texto
+{
+    0%
+    {   
+        color: #F0F6F5;
+    }
+    100%
+    {
+        color: #000F0E;
+    }
+
+   
+}
+
+@keyframes light-to-dark-botao
+{
+    0%
+    {   
+        color: #c7d6cd;
+    }
+    100%
+    {
+        color: #000F0E;
+    }
+}
+
+@keyframes dark-to-light-botao
+{
+    0%
+    {
+        color: #000F0E;
+    }
+    100% 
+    {
+        color: #c7d6cd;
+    }
+}
+
+@keyframes light-to-dark-input
+{
+    0%
+    {   
+        background-color: #BECFCA;
+    }
+    100%
+    {
+        background-color: #012320;
+    }
+}
+
+@keyframes dark-to-light-input
+{
+    0%
+    {
+        background-color: #012320;
+    }
+    100% 
+    {
+        background-color: #BECFCA;
     }
 }
