--- a/site/estiloHome.css
+++ b/site/estiloHome.css
@@ -22,7 +22,7 @@ header {
 header h2 {
     font-size: 40px;
     font-weight: bold;
-    color: #024873;
+    color: #0A8CBF;
     margin: 0px;
 }
 
@@ -42,7 +42,9 @@ header menu li {
 .banner {
     display: flex;
     justify-content: space-evenly;
-    padding-top: 50px;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
 }
 
 .banner div {
@@ -50,7 +52,6 @@ header menu li {
     flex-direction: column;
     align-items: center;
     margin-left: 15px;
-    margin-top: 50px;
 }
 
 .texto1 {
@@ -68,8 +69,8 @@ header menu li {
 }
 
 .banner img {
-    height: 500px;
-    width: 100%;
+    height: 100vh;
+    width: 60vw;
 }
 
 /* Seção arduino */
@@ -112,6 +113,43 @@ header menu li {
 }
 
 
+/* Seção Dashboard */
+
+.dashboard {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-left: 30px;
+    margin-right: 30px;
+    font-size: 35px;
+}
+
+.dashboard img {
+    width: 60vw;
+    height: 60vh;
+}
+
+/* Seção calculadora */
+
+.calculadora {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 50px;
+    font-size: 35px;
+}
+
+.calculadora img {
+    height: 60vh;
+    width: 40vw;
+}
+
+.calculadora h2 {
+    font-size: 120px;
+    color: #0A8CBF;
+}
+
+
 /* Seção Quem Somos */
 
 .quemSomos {
@@ -132,9 +170,55 @@ header menu li {
     font-size: 35px;
 }
 
-.quemSomos img {
-    height: 500px;
-    width: 500px;
+/* slider */
+
+.slider {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 30%;
+    height: 150px;
+}
+
+.slider button {
+    color: white;
+    background-color: #0A8CBF;
+    border: none;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
+.slider button:hover {
+    background-color: #024873;
+    cursor: pointer;
+}
+
+.slider ul {
+    position: relative;
+    display: flex;
+    width: 200px;
+    height: 200px;
+}
+
+.slider li {
+    list-style: none;
+    align-items: center;
+    justify-content: center;
+}
+
+.imgSlider {
+    position: absolute;
+    top: -50px;
+    left: -30px;
+    width: 300px;
+    height: 300px;
+    border-radius: 10px;
+    opacity: 0;
+}
+
+.slider li .on {
+    opacity: 1;
 }
 
 /* Footer: */
@@ -173,6 +257,21 @@ footer menu input {
     border-radius: 3px;
     padding: 5px 8px;
     color: white;
+}
+
+.contatos li{
+    margin-bottom: 15px;
+}
+
+.contatos div {
+    display: flex;
+    justify-content: space-between;
+}
+
+.contatos img {
+    height: 30px;
+    width: 30px;
+    margin: 0px;
 }
 
 /* Extras */
