--- a/site/estiloHome.css
+++ b/site/estiloHome.css
@@ -17,6 +17,7 @@ header {
     position: fixed;
     background-color: #F0F6F5;
     width: -webkit-fill-available;
+    z-index: 100;
 }
 
 header h2 {
@@ -41,10 +42,9 @@ header menu li {
 
 .banner {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
     height: 100vh;
-    width: 100%;
 }
 
 .banner div {
@@ -66,11 +66,14 @@ header menu li {
 
 .banner div p {
     margin: 0px;
+
 }
 
 .banner img {
     height: 100vh;
     width: 60vw;
+    position: absolute;
+    left: 580px;
 }
 
 /* Seção arduino */
