Alterações no estilo e html do cadastro e simulador

--- a/site/cadastro.css
+++ b/site/cadastro.css
@@ -147,6 +147,11 @@ a:hover {
     animation: dark-to-light-botao 0.3s ease-in-out;
 }
 
+#btn_cadastro:hover {
+    cursor: pointer;
+    background-color: #0ea6e2;
+}
+
 .mensagemErro
 {
     color: red;
@@ -220,6 +225,75 @@ a:hover {
 .dark #slt_uf:focus {
     background-color: var(--color-bg-slide-900);
 }
+
+.dark #div_input input 
+{
+    color: white;
+    background-color: var(--color-bg-800);
+    
+}
+
+.dark #btn_cadastro 
+{
+    color: var(--color-texto-900);
+}
+
+.dark#main_container
+{
+    background-color: var(--color-bg-800);
+}
+
+.dark #cadastro_form 
+{
+    color: var(--color-texto-50);
+    background-color: var(--color-bg-slide-800);
+}
+
+.dark #div_input span
+{
+    color: var(--color-texto-50);
+}
+
+#slt_uf {
+    width: 100%;
+    height: 5%;
+    padding: 5px;
+    font-size: 18px;
+    border-radius: 5px;
+    border: 2px solid transparent;
+    background-color: #BECFCA;
+    color: #000F0E;
+    cursor: pointer;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="%23000F0E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down"><polyline points="6 9 12 15 18 9"/></svg>');
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    background-size: 20px;
+    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out, border-color 0.3s ease-in-out;
+}
+
+
+
+#slt_uf:focus {
+    outline: none;
+    border-color: #0A8CBF;
+    background-color: var(--color-bg-50);
+}
+
+
+.dark #slt_uf {
+    background-color: var(--color-bg-800);
+    color: var(--color-texto-50);
+    border-color: transparent;
+    background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="%23F0F6F5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down"><polyline points="6 9 12 15 18 9"/></svg>');
+}
+
+.dark #slt_uf:focus {
+    background-color: var(--color-bg-slide-900);
+}
+
 
 
 /* animacoes */
