--- a/site/tela_cadastro.css
+++ b/site/tela_cadastro.css
@@ -23,10 +23,6 @@
 }
 
 
-body
-{
-    overflow: hidden;
-}
 
 * 
 {
@@ -50,7 +46,7 @@ body
 #left_cadastro, #cadastro_right
 {
     width: 50%;
-    height: 100%;
+    /* height: 100%; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -137,7 +133,7 @@ body
     border-radius: 5px;
     border-style: hidden;
     width: 100%;
-    height: 8%;
+    height: 50%;
     font-size: 18px;
     color: #000F0E;
     padding: 0px 5px;
