--- a/site/tela_cadastro.css
+++ b/site/tela_cadastro.css
@@ -31,10 +31,15 @@
     padding: 0px;
 }
 
+body {
+    height: fit-content;
+    background-color: #c9e7e9;
+}
+
 #main_container
 {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 140vh;
     background-color: #c9e7e9 ;
     display: flex;
     justify-content: center;
