--- a/site/tela_cadastro.css
+++ b/site/tela_cadastro.css
@@ -39,7 +39,7 @@ body {
 #main_container
 {
     width: 100%;
-    height: 140vh;
+    height: fit-content;
     background-color: #c9e7e9 ;
     display: flex;
     justify-content: center;
@@ -51,11 +51,11 @@ body {
 #left_cadastro, #cadastro_right
 {
     width: 50%;
-    /* height: 100%; */
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin: 50px 0px;
 }
 
 
