--- a/site/css/index.css
+++ b/site/css/index.css
@@ -22,7 +22,7 @@ header {
     top: 0;
     justify-content: space-around;
     align-items: center;
-    border-bottom: 2px solid black;
+    border-bottom: 3px solid #0A8CBF;
     position: fixed;
     background-color: #F0F6F5;
     width: -webkit-fill-available;
@@ -43,6 +43,8 @@ header {
 
         li {
             font-size: 30px;
+            color: #0A8CBF;
+
         }
 
         &:hover {
@@ -126,20 +128,62 @@ header {
 }
 
 .banner {
-    background-color: red;
+    /* background-color: red; */
     width: 100%;
-    height: 100vh;
     padding-top: 80px;
     height: calc(100vh - 80px);
-    /* background: rgb(255, 255, 255); */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: url("../imagens/fruto.jpg");
+    background-size: cover;
+    z-index: 0;
     /* background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(0, 0, 0, 0) 100%); */
-    
-    img {
-        background-position: center;
-        background-size: cover;
+
+    .fundo {
         width: 100%;
-        height: 100vh;
-        background-color: rgb(0, 0, 0, 0.5);
+        /* padding-top: 80px; */
+        height: calc(100vh - 80px);
+        background-color: rgba(0, 0, 0, 0.3);
+        position: absolute;
+        /* z-index: 1; */
+    }
+
+    .titulo {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100px;
+        z-index: 2;
+
+        .um {
+            width: 100%;
+
+            p {
+                color: white;
+                font-size: 60px;
+                text-align: center;
+                margin: 0;
+                padding: 0;
+            }
+
+        }
+
+        .dois {
+            width: 100%;
+
+            p {
+                color: white;
+                font-size: 25px;
+                text-align: center;
+                margin: 0;
+                padding: 0;
+
+                span {
+                    color: #0A8CBF;
+                }
+            }
+        }
     }
 
 
