--- a/site/css/index.css
+++ b/site/css/index.css
@@ -186,9 +186,144 @@ header {
     }
 }
 
-.sobreNos {
+.oQueE {
     width: 100%;
-    padding-top: 80px;
     height: calc(100vh - 80px);
-    background-color: blueviolet;
+
+    .solo {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 50%;
+        border-top: 3px solid #0A8CBF;
+        background-color: #F0F6F5;
+
+
+        .texto {
+            display: flex;
+            flex-direction: column;
+            margin-left: 100px;
+            width: 600px;
+            height: 210px;
+
+
+            h1 {
+                color: #0A8CBF;
+                margin: 0;
+                padding: 0;
+                font-size: 25px;
+                margin-bottom: 10px;
+            }
+
+            p {
+                margin: 0;
+                color: black;
+                font-size: 20px;
+            }
+        }
+
+        .imagem {
+            width: 600px;
+            height: 250px;
+            border-radius: 40px 0 0 40px;
+            background-image: url("../imagens/terra(1).jpg");
+            background-size: cover;
+            box-shadow: -5px 9px 38px 3px rgba(0, 0, 0, 0.46);
+            -webkit-box-shadow: -5px 9px 38px 3px rgba(0, 0, 0, 0.46);
+            -moz-box-shadow: -5px 9px 38px 3px rgba(0, 0, 0, 0.46);
+
+        }
+    }
+
+    .cafe {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: row-reverse;
+        width: 100%;
+        /* padding-top: 80px; */
+        height: 50%;
+        /* border-top: 3px solid #0A8CBF; */
+        background-color: #F0F6F5;
+
+        .texto {
+            display: flex;
+            margin-right: 100px;
+            width: 600px;
+            height: 140px;
+
+            p {
+                color: black;
+                font-size: 20px;
+            }
+        }
+
+        .imagem {
+            width: 600px;
+            height: 250px;
+            border-radius: 0 40px 40px 0;
+            background-image: url("../imagens/geãos\ de\ café.jpg");
+            background-size: cover;
+            box-shadow: 4px 9px 38px 3px rgba(0, 0, 0, 0.46);
+            -webkit-box-shadow: 4px 9px 38px 3px rgba(0, 0, 0, 0.46);
+            -moz-box-shadow: 4px 9px 38px 3px rgba(0, 0, 0, 0.46);
+
+        }
+    }
+}
+
+.tecnologia {
+    height: calc(100vh - 80px);
+    width: 100%;
+    /* color: white; */
+    border-top: 3px solid #0A8CBF;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #F0F6F5;
+
+    .texto {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 50%;
+        height: 500px;
+        margin-left: 40px;
+
+        h1 {
+            color: #0A8CBF;
+            margin: 0;
+            padding: 0;
+            font-size: 40px;
+        }
+
+        p {
+            color: black;
+            font-size: 20px;
+        }
+
+        ul {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            width: 100%;
+            height: 200px;
+            li {
+                color: black;
+                font-size: 20px;
+            }
+        }
+    }
+
+    .imagem {
+        width: 500px;
+        height: 500px;
+        background-image: url("../imagens/sensor\ de\ umidade.png");
+        background-size: cover;
+        /* box-shadow: 4px 9px 38px 3px rgba(0, 0, 0, 0.46);
+        -webkit-box-shadow: 4px 9px 38px 3px rgba(0, 0, 0, 0.46);
+        -moz-box-shadow: 4px 9px 38px 3px rgba(0, 0, 0, 0.46); */
+    }
+
 }
