--- a/site/css/index.css
+++ b/site/css/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 html, body {
-    background-color: black;
+    /* background-color: black; */
     margin: 0;
     padding: 0;
     font-family: 'Rubik', sans-serif;
@@ -279,9 +279,58 @@ header {
     /* color: white; */
     border-top: 3px solid #0A8CBF;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    /* justify-content: space-between; */
     align-items: center;
     background-color: #F0F6F5;
+
+
+    .titulo {
+        background-color: #0A8CBF;
+        width: 100%;
+        height: 30%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        color: #F0F6F5;
+
+        h1 {
+            font-size: 40px;
+            margin: 20px;
+        }
+
+        p {
+            font-size: 30px;
+            margin: 0;
+            padding: 0;
+
+        }
+    }
+
+    .texto {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        background-color: #F0F6F5;
+        width: 100%;
+        height: 100%;
+
+        .um, .dois, .tres {
+            /* background-color: aquamarine; */
+            width: 30%;
+            height: 80%;
+
+            li {
+                list-style: none;
+                font-size: 20px;
+                text-align: center;
+                padding: 20px;
+            }
+
+        }
+    }
+
+/*     
 
     .texto {
         display: flex;
@@ -314,9 +363,9 @@ header {
                 font-size: 20px;
             }
         }
-    }
+    } */
 
-    .imagem {
+    /* .imagem {
         width: 500px;
         height: 500px;
         background-image: url("../imagens/sensor\ de\ umidade.png");
@@ -324,6 +373,6 @@ header {
         /* box-shadow: 4px 9px 38px 3px rgba(0, 0, 0, 0.46);
         -webkit-box-shadow: 4px 9px 38px 3px rgba(0, 0, 0, 0.46);
         -moz-box-shadow: 4px 9px 38px 3px rgba(0, 0, 0, 0.46); */
-    }
+    /* }  */
 
 }
