--- a/site/css/secoes.css
+++ b/site/css/secoes.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 html, body {
-    /* background-color: black; */
     margin: 0;
     padding: 0;
     font-family: 'Rubik', sans-serif;
@@ -127,7 +126,7 @@ header {
 
 .oQueE {
     width: 100%;
-    padding-top: 80px;
+    padding-top: 77px;
     height: calc(100vh - 80px);
 
     .solo {
@@ -182,9 +181,7 @@ header {
         align-items: center;
         flex-direction: row-reverse;
         width: 100%;
-        /* padding-top: 80px; */
         height: 50%;
-        /* border-top: 3px solid #0A8CBF; */
         background-color: #F0F6F5;
 
         .texto {
@@ -211,4 +208,15 @@ header {
 
         }
     }
+}
+
+.sobreNos {
+    height: calc(100vh - 80px);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #F0F6F5;
+    padding-top: 80px;
+
 }
