--- a/site/css/index.css
+++ b/site/css/index.css
@@ -5,6 +5,8 @@ html, body {
     padding: 0;
     font-family: 'Rubik', sans-serif;
     scroll-padding-top: 80px;
+    background-color: #F0F6F5;
+
 }
 
 .main-content {
@@ -131,14 +133,14 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url("../imagens/fruto.jpg");
+    background-image: url("../imagens/foto2.jpg");
     background-size: cover;
     z-index: 0;
 
     .fundo {
         width: 100%;
         height: calc(100vh - 80px);
-        background-color: rgba(0, 0, 0, 0.3);
+        background-color: rgba(0, 0, 0, 0.1);
         position: absolute;
     }
 
@@ -148,23 +150,26 @@ header {
         width: 100%;
         height: 100px;
         z-index: 2;
-
+        align-items: center;
+        justify-content: center;
+        
         .um {
-            width: 100%;
-
+            width: 70%;
+            
             p {
                 color: #F0F6F5;
                 font-size: 60px;
                 text-align: center;
                 margin: 0;
                 padding: 0;
-                text-shadow: 2px 2px 5px rgba(0, 0, 0, 1s);
+                text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+                /* font-weight: bold; */
             }
 
         }
 
         .dois {
-            width: 100%;
+            width: 70%;
 
             p {
                 color: #F0F6F5;
@@ -177,7 +182,6 @@ header {
 
                 span {
                     color: #0A8CBF;
-                    text-shadow: 2px 2px 5px rgba(0, 0, 0, 1);
                 }
             }
         }
@@ -185,7 +189,7 @@ header {
 }
 
 .simulador {
-    background-color: #F0F6F5;
+    /* background-color: #F0F6F5; */
     border-top: 3px solid #0A8CBF;
     width: 100%;
     height: calc(100vh - 80px);
@@ -257,7 +261,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #F0F6F5;
+    /* background-color: #F0F6F5; */
 
 
     .titulo {
@@ -309,7 +313,7 @@ header {
                 font-size: 20px;
                 text-align: center;
                 padding: 20px;
-                color: #28a745;
+                color: #0A8CBF;
             }
 
             .sensor {
@@ -336,7 +340,7 @@ header {
 }
 
 .dashboard {
-    background-color: #F0F6F5;
+    /* background-color: #F0F6F5; */
     width: 100%;
     height: calc(100vh - 80px);
     display: flex;
@@ -406,7 +410,7 @@ header {
     width: 100%;
     display: flex;
     align-items: center;
-    background-color: #F0F6F5;
+    /* background-color: #F0F6F5; */
 
     .texto {
         width: 50%;
@@ -471,6 +475,8 @@ header {
 
                 p {
                     color: #ee169b;
+                    font-weight: bold;
+
                 }
             }
         }
@@ -516,12 +522,133 @@ header {
 }
 
 .footer {
-    height: calc(150vh - 80px);
     width: 100%;
+    height: calc(100vh - 80px);
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #0A8CBF;
+    list-style: none;
+
+    .barrinha {
+        width: 100%;
+        height: 10%;
+        display: flex;
+        border-bottom: 2px solid #F0F6F5;
+
+        .logoWW {
+            margin-left: 4%;
+            display: flex;
+            transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+            align-items: center;
+
+            a {
+                display: flex;
+                text-decoration: none;
+                align-items: center;
+            }
+
+            img {
+                width: 50px;
+                height: auto;
+
+            }
+
+            li {
+                font-size: 20px;
+                color: #F0F6F5;
+            }
+        }
+    }
+
+    .links {
+        width: 100%;
+        height: 30%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .opcoes {
+            width: 50%;
+            height: 10%;
+            /* margin-left: 5%; */
+            display: flex;
+            /* flex-direction: column; */
+            flex-wrap: wrap;
+            justify-content: space-around;
+
+                
+                a {
+                    color: #F0F6F5;
+                    list-style: none;
+                    text-decoration: none;
+
+                }
+        }
+    }
+
+    .redes {
+        width: 100%;
+        height: 10%;
+        color: #F0F6F5;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .container {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            width: 40%;
+            height: 100%;
+
+
+            p {
+                font-weight: bold;
+
+            }
+
+            img {
+                width: 25px;
+                height: auto;
+                cursor: pointer;
+            }
+        }
+    }
+
+    .texto {
+        width: 100%;
+        height: 40%;
+
+        p {
+            height: 100%;
+            margin: 0;
+            padding: 2% 5% 0 5%;
+            height: 70%;
+            color: #F0F6F5;
+        }
+    }
+
+    .endereco {
+        width: 100%;
+        height: 10%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .rua {
+            margin: 0;
+            color: #F0F6F5;
+            margin-left: 5%;
+
+        }
+
+        .copy {
+            color: #F0F6F5;
+            margin: 0;
+            margin-right: 5%;
+        }
+    }
 }
 
 .cookie {
