--- a/site/css/index.css
+++ b/site/css/index.css
@@ -158,7 +158,7 @@ header {
             
             p {
                 color: #F0F6F5;
-                font-size: 60px;
+                font-size: 3em;
                 text-align: center;
                 margin: 0;
                 padding: 0;
