--- a/site/css/dashboard.css
+++ b/site/css/dashboard.css
@@ -1,170 +1,176 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Rubik';
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Rubik";
 }
 
 .barrinha {
-    position: fixed;
-    background-color: #F0F6F5;
-    box-shadow: 0 4px 8px 0 rgb(0, 0, 0, 0.08);
-    width: 100%;
-    height: 60px;
-    padding: 0 50px;
-    align-items: center;
-    z-index: 1;
+  position: fixed;
+  background-color: #f0f6f5;
+  box-shadow: 0 4px 8px 0 rgb(0, 0, 0, 0.08);
+  width: 100%;
+  height: 60px;
+  padding: 0 50px;
+  align-items: center;
+  z-index: 1;
+  display: flex;
+  justify-content: space-between;
+
+  span {
+    font-size: 24px;
+    color: #0a8cbf;
+  }
+
+  .user {
+    position: relative;
+    width: 50px;
+    height: 50px;
+
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  .logo {
     display: flex;
-    justify-content: space-between;
+    align-items: center;
 
-    span {
-        font-size: 24px;
-        color: #0A8CBF;
+    img {
+      width: 50px;
+      height: auto;
     }
 
-    .user {
-        position: relative;
-        width: 50px;
-        height: 50px;
-
-        img {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
+    h1 {
+      color: #0a8cbf;
     }
-
-    .logo {
-        display: flex;
-        align-items: center;
-
-        img {
-            width: 50px;
-            height: auto;
-
-        }
-
-        h1 {
-            color: #0A8CBF;
-        }
-    }
+  }
 }
 
 .lateral {
-    position: fixed;
-    top: 60px;
-    width: 260px;
-    height: calc(100% - 60px);
-    background-color: #0A8CBF;
-    overflow-x: hidden;
+  position: fixed;
+  top: 60px;
+  width: 260px;
+  height: calc(100% - 60px);
+  background-color: #0a8cbf;
+  overflow-x: hidden;
 
-    ul {
-        margin-top: 20px;
+  ul {
+    margin-top: 20px;
 
-        li {
-            width: 100%;
-            list-style: none;
+    li {
+      width: 100%;
+      list-style: none;
 
-            a {
-                width: 100%;
-                text-decoration: none;
-                color: #F0F6F5;
-                height: 60px;
-                display: flex;
-                align-items: center;
-                margin-left: 10%;
+      a {
+        width: 100%;
+        text-decoration: none;
+        color: #f0f6f5;
+        height: 60px;
+        display: flex;
+        align-items: center;
+        margin-left: 10%;
 
+        i {
+          text-align: center;
+          font-size: 24px;
+          display: flex;
+          justify-content: center;
 
-                i {
-                    text-align: center;
-                    font-size: 24px;
-                    display: flex;
-                    justify-content: center;
-
-                    img {
-                        width: 24px;
-                        height: auto;
-
-                    }
-                }
-
-                div {
-                    margin-left: 5%;
-                }
-            }
+          img {
+            width: 24px;
+            height: auto;
+          }
         }
+
+        div {
+          margin-left: 5%;
+        }
+      }
     }
+  }
 }
 
 .menu {
-    position: absolute;
-    top: 60px;
-    width: calc(100% - 260px);
-    left: 260px;
-    min-height: calc(100vh - 60px);
-    background-color: #d4f3ed;
+  position: absolute;
+  top: 60px;
+  width: calc(100% - 260px);
+  left: 260px;
+  min-height: calc(100vh - 60px);
+  background-color: #d4f3ed;
 
-    .cards {
-        width: 100%;
-        padding: 35px 20px;
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-gap: 20px;
+  .cards {
+    width: 100%;
+    padding: 35px 20px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
 
-        .card {
-            padding: 20px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            background-color: #F0F6F5;
-            border-radius: 10px;
-            box-shadow: 0 7px 25px 0 rgb(0, 0, 0, 0.08);
+    .card {
+      padding: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background-color: #f0f6f5;
+      border-radius: 10px;
+      box-shadow: 0 7px 25px 0 rgb(0, 0, 0, 0.08);
 
-            .numero {
-                font-size: 35px;
-                font-weight: 500;
-                color: #0A8CBF;
-            }
+      .numero {
+        font-size: 35px;
+        font-weight: 500;
+        color: #0a8cbf;
+      }
 
-            .nome {
-                color: #8888;
-                font-weight: 600;
-            }
-        }
+      .nome {
+        color: #8888;
+        font-weight: 600;
+      }
     }
+  }
 
-    img {
-        width: 40px;
-        height: auto;
+  img {
+    width: 40px;
+    height: auto;
+  }
+
+  .chart {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-gap: 20px;
+    width: 100%;
+    padding: 20px;
+    padding-top: 0;
+
+    .grafico {
+      background: #f0f6f5;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 7px 25px rgb(0, 0, 0, 0.08);
+      width: 100%;
+
+      h2 {
+        margin-bottom: 5px;
+        font-size: 20px;
+        color: #666;
+        text-align: center;
+      }
     }
+  }
+}
 
-    .chart {
-        display: grid;
-        grid-template-columns: 2fr 1fr;
-        grid-gap: 20px;
-        width: 100%;
-        padding: 20px;
-        padding-top: 0;
-
-        .grafico {
-            background: #F0F6F5;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 7px 25px rgb(0, 0, 0, 0.08);
-            width: 100%;
-
-            h2 {
-                margin-bottom: 5px;
-                font-size: 20px;
-                color: #666;
-                text-align: center;
-            }
-
-        }
-    }
+#div_alerta {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  width: 100px;
+  background-color: white;
+  color: red;
 }
